--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -20,7 +20,7 @@ Individual observations were combined in the tidy_data.xlsx file. The following 
 5. Saved as a .csv with "," delimiter
 
 ## [1.1.0] - 2023-06-22
-  ### Added
+### Added
 We made a plot of the mass vs number of hatched eggs (it looked ugly)
 The mass was log transformed to increase the visibility of the plot
 We added a linear regression line to the plot.
@@ -28,3 +28,9 @@ We added a linear regression line to the plot.
 ## [1.2.0] - 2023-06-22
 ### Added
 New MIT license file added
+
+## [1.2.1] - 2023-06-22
+### Removed
+Deleted all raw xlsx files
+
+
